--- a/lab04/index.html
+++ b/lab04/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>EECS448 LAB04</h1>
-<a href="Exercise1/Exercise1.php">Exercise1</a><br>
+<a href="Exercise1/Exercise.html">Exercise1</a><br>
 <a href="Exercise2/Quiz.html">Exercise2</a><br>
 <a href="Exercise3/customerFrontend.html">Exercise3</a><br>
   </body>
